update the wrapping div so that it hugs the contents (ther was an issue in RTL)

--- a/packages/office-ui-fabric-react/src/components/SwatchColorPicker/SwatchColorPicker.scss
+++ b/packages/office-ui-fabric-react/src/components/SwatchColorPicker/SwatchColorPicker.scss
@@ -17,6 +17,10 @@
   }
 }
 
+.wrapper {
+  display: inline-block;
+}
+
 .item {
   @include ms-font-m;
   @include focus-border();
